--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@astrojs/mdx": "^2.1.1",
 		"@astrojs/react": "^3.0.10",
 		"@astrojs/tailwind": "^5.1.0",
+		"@heroicons/react": "^2.1.1",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
@@ -24,6 +25,7 @@
 		"marked": "^12.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-responsive-carousel": "^3.2.23",
 		"react-scroll": "^1.9.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss": "^3.4.1",
